--- a/css/style.css
+++ b/css/style.css
@@ -25,26 +25,36 @@ html {
 body {
   display: flex;
   flex-direction: column;
+  /* height: 100vh; */
 }
 
 .header {
+  width: 100%;
   display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 1rem;
+  border-bottom: 0.8px solid whitesmoke;
 }
 
 .header__nav {
+  width: 100%;
   display: flex;
   align-items: center;
+  justify-content: space-around;
 }
 
 .header__logo-container {
   width: 120px;
   height: auto;
-  margin-right: 2rem;
+  /* margin-right: 2rem; */
 }
 
 .header__ul {
+  width: 30%;
   display: flex;
-  gap: 1rem;
+  align-items: center;
+  justify-content: space-between;
   list-style: none;
 }
 
@@ -52,23 +62,56 @@ body {
   text-decoration: none;
   color: whitesmoke;
   transition: all 0.2s;
+  font-weight: bold;
+  letter-spacing: 1px;
 }
 
 .header__ul li a:hover,
 .header__ul li a:active,
 .header__ul li a:focus {
   color: rgba(245, 203, 243, 0.973);
+
+  border-bottom: 1px solid rgba(245, 203, 243, 0.973);
 }
 
-.hero {
-  width: 100%;
-  margin-bottom: 2rem;
+.header__button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: whitesmoke;
+  background-color: rgb(36, 36, 36);
+  padding: 0.8rem 1.2rem;
+  border: 1px solid whitesmoke;
+  border-radius: 8px;
+  font-weight: bold;
+  letter-spacing: 1px;
+}
+
+.header__button:hover,
+.header__button:active,
+.header__button:focus {
+  color: rgba(245, 203, 243, 0.973);
+}
+
+.header__button a {
+  display: block;
+  text-decoration: none;
+  color: inherit;
+  font-size: clamp(1rem, 2vh, 1.5rem);
 }
 
 .main {
+  width: 50vw;
+  height: 100%;
   margin: 0 auto;
+  margin-top: 3rem;
   padding: 1rem;
   padding-bottom: 8rem;
+}
+
+.main__hero {
+  width: 100%;
+  margin-bottom: 2rem;
 }
 
 .main__h2 {
@@ -108,6 +151,11 @@ body {
   display: block;
 }
 
+.links__container a:focus,
+.links__container a:hover {
+  color: rgb(44, 187, 243);
+}
+
 .links__image {
   width: 100%;
 }
@@ -117,10 +165,63 @@ body {
   padding: 1rem;
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-around;
   text-align: center;
 }
 
 .footer figure {
   width: 80px;
+}
+
+/* About Page */
+.main__article__about {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.main__article__about__section p {
+  line-height: 1.4rem;
+}
+
+/* Services Page */
+.main__article__services {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.main__article__services__section {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.services__card {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  align-items: start;
+}
+
+.services__card figure {
+  width: 150px;
+  height: 150px;
+  overflow: hidden;
+}
+
+.services__card figure img {
+  width: 100%;
+  height: auto;
+}
+
+.services__card p {
+  line-height: 1.4rem;
+  width: 80%;
+}
+
+.services__card .bold__title {
+  font-weight: bold;
+  display: block;
 }
