--- a/css/style.css
+++ b/css/style.css
@@ -225,3 +225,72 @@ body {
   font-weight: bold;
   display: block;
 }
+
+/* Contact Page */
+.contact__hero figure {
+  width: 100%;
+  height: 300px;
+  overflow: hidden;
+  position: relative;
+}
+
+.contact__hero figure img {
+  width: 100%;
+  height: auto;
+  position: absolute;
+  top: -150px;
+}
+
+.main__article__contact {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.main__article__contact__container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.wrap {
+  display: block;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+label,
+input,
+textarea {
+  display: block;
+  width: 100%;
+  margin-bottom: 0.5rem;
+}
+
+input,
+textarea {
+  font-size: inherit;
+  padding: 5px;
+  border-radius: 5px;
+}
+
+.form_submit_btn {
+  border: 1px solid whitesmoke;
+  width: 5rem;
+  padding: 5px;
+  border-radius: 5px;
+  border: 1px solid whitesmoke;
+  background-color: black;
+  color: whitesmoke;
+  font-size: inherit;
+  cursor: pointer;
+  transition: all 0.5s;
+}
+
+.form_submit_btn:hover {
+  color: black;
+  background-color: white;
+}
